Added remove button to added classes, changed contact/about

--- a/UCSC_Course_Planner/templates/about.html
+++ b/UCSC_Course_Planner/templates/about.html
@@ -69,60 +69,13 @@
 
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="row">
-    <div class="hero-unit">
-        <h1>About Us</h1>
-        <p>Just trying to ease the college experience :)</p>
-    </div>
+        <div class="hero-unit">
+            <h1>About </h1>
+            <p>Just trying to ease the college experience :)</p>
+        </div>
     </div>
     <!-- Example row of columns -->
-    <ul class="thumbnails">
-        <li class = "span3">
-            <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
-                <div class="caption">
-                    <h3>Django Dog</h3>
-                    <p>The largest contributer to the site.</p>
-                    <p>
-                        <a href="#"class="btn btn-primary">Email</a>
-                        <a href="http://github.com"class="btn btn-primary">Github</a>
-                    </p>
-            </div>
-        </li>
-                <li class = "span3">
-            <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
-                <div class="caption">
-                    <h3>Django Dog</h3>
-                    <p>The largest contributer to the site.</p>
-                    <p>
-                        <a href="#"class="btn btn-primary">Email</a>
-                        <a href="http://github.com"class="btn btn-primary">Github</a>
-                    </p>
-            </div>
-        </li>        <li class = "span3">
-            <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
-                <div class="caption">
-                    <h3>Django Dog</h3>
-                    <p>The largest contributer to the site.</p>
-                    <p>
-                        <a href="#"class="btn btn-primary">Email</a>
-                        <a href="http://github.com"class="btn btn-primary">Github</a>
-                    </p>
-            </div>
-        </li>        <li class = "span3">
-            <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px;height: 200px;" src="/static/img/django2.jpg">
-                <div class="caption">
-                    <h3>Django Dog</h3>
-                    <p>The largest contributer to the site.</p>
-                    <p>
-                        <a href="#"class="btn btn-primary">Email</a>
-                        <a href="http://github.com"class="btn btn-primary">Github</a>
-                    </p>
-            </div>
-        </li>
-     </ul>
+    
     <hr>
 
     <footer align="center">
