--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -295,7 +295,7 @@
                 $('#'+ id).append('<li class="ui-state-default">' +
                         '<div class="classHeader">'
                         + course +
-                        '<span class="classUnits badge badge-success">1</span><br>' +
+                        '<span class="classUnits badge badge-success">1</span> <span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span> <br>' +
                         '</div>' + '<div class="classInstructor">Instructor Name<br></div>' +
                         ' <div class="classTime">MWF 12-2pm<br></div>' +
                         '</li>');
