--- a/UCSC_Course_Planner/templates/login.html
+++ b/UCSC_Course_Planner/templates/login.html
@@ -100,7 +100,7 @@
 {#        <label class="checkbox">#}
 {#            <input type="checkbox" value="remember-me"> Remember me#}
 {#        </label>#}
-{#        <button class="btn btn-large btn-primary" type="submit">Sign in</button>#}
+{#        <button type="button" class="btn btn-large btn-primary" type="submit">Sign in</button>#}
     </form>
 
 </div> <!-- /container -->
