Added button for going back to change major

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -25,7 +25,7 @@
             font-size: 13pt;
         }
 {#        Sets these elements to be hidden initially...#}
-        .courseRemove, .classUnits, .classInstructor, .classTime{
+        #changeMajor, .courseRemove, .classUnits, .classInstructor, .classTime{
             font-size:  small;
 
             display: none;
@@ -181,6 +181,8 @@
 
 {#            when you click the specific edit button...#}
             $("#edit").click(function () {
+                $("#changeMajor").toggle();
+
                 $(".courseRemove").toggle();     // this actually changes the display
                 // the rest updates the text on the button
                 if ( $("span", this).text() == "Edit"){
@@ -469,10 +471,11 @@
                 <br>
                 </p>
                 <hr>
+                <h3> Major :</h3> <a class="btn btn-small"  href="/selectMajor" id="changeMajor">Edit Major & Minor Selection</a>
                 {% if major2 %}
                     <h3> Majors :</h3>
                 {% else %}
-                    <h3> Major :</h3>
+
                 {%  endif %}
 
                 <h4>{{ major1 }} </h4>
@@ -599,13 +602,13 @@
                                                         <div class="classTime">TH 8:30am-10am<br></div>
 
                                                     </li>
-                                                    <li class="ui-state-default">
+                                                    <li class="ui-state-default" id="Fall12Class2">
                                                         <div class="classHeader">CMPS 12B <span class="classUnits badge badge-success">5</span><br></div>
                                                         <div class="classInstructor">W. Mackey<br></div>
                                                         <div class="classTime">T/TH 5-6:45pm<br></div>
 
                                                     </li>
-                                                    <li class="ui-state-default">
+                                                    <li class="ui-state-default" id="Fall12Class3">
                                                         <div class="classHeader">CMPS 12L <span class="classUnits badge badge-success">2</span> </div>
                                                         <div class="classInstructor">W. Mackey<br></div>
                                                         <div class="classTime">TBA<br></div>
