--- a/UCSC_Course_Planner/templates/home.html
+++ b/UCSC_Course_Planner/templates/home.html
@@ -27,7 +27,35 @@
     <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.png">
     <style type="text/css"></style></head>
 
+<script>
+    $(document).ready(function() {
+// check to make sure that the browser can handle window.addEventListener
+        if (window.addEventListener) {
+            // create the keys and konami variables
+            var keys = [],
+                    konami = "38,38,40,40,37,39,37,39,66,65";
 
+            // bind the keydown event to the Konami function
+            window.addEventListener("keydown", function(e){
+                // push the keycode to the 'keys' array
+                keys.push(e.keyCode);
+
+                // and check to see if the user has entered the Konami code
+                if (keys.toString().indexOf(konami) >= 0) {
+                    // do something such as:
+                     alert('Konami');
+
+                    // and finally clean up the keys array
+                    keys = [];
+                };
+            }, true);
+        };
+
+
+
+});
+
+    </script>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
