Added more course remove buttons

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -482,11 +482,10 @@
                 <br>
                 </p>
                 <hr>
-                <h3> Major :</h3> <a class="btn btn-small"  href="/selectMajor" id="changeMajor">Edit Major & Minor Selection</a>
                 {% if major2 %}
-                    <h3> Majors :</h3>
+                    <h3> Majors:</h3> <a class="btn btn-small"  href="/selectMajor" id="changeMajor">Edit Major & Minor Selection</a>
                 {% else %}
-
+                    <h3> Major:</h3> <a class="btn btn-small"  href="/selectMajor" id="changeMajor">Edit Major & Minor Selection</a>
                 {%  endif %}
 
                 <h4>{{ major1 }} </h4>
@@ -614,19 +613,19 @@
 
                                                     </li>
                                                     <li class="ui-state-default" id="Fall12Class2">
-                                                        <div class="classHeader">CMPS 12B <span class="classUnits badge badge-success">5</span><br></div>
+                                                        <div class="classHeader">CMPS 12B <span class="classUnits badge badge-success">5</span> <span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">W. Mackey<br></div>
                                                         <div class="classTime">T/TH 5-6:45pm<br></div>
 
                                                     </li>
                                                     <li class="ui-state-default" id="Fall12Class3">
-                                                        <div class="classHeader">CMPS 12L <span class="classUnits badge badge-success">2</span> </div>
+                                                        <div class="classHeader">CMPS 12L <span class="classUnits badge badge-success">2</span> <span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">W. Mackey<br></div>
                                                         <div class="classTime">TBA<br></div>
 
                                                     </li>
                                                     <li class="ui-state-default">
-                                                        <div class="classHeader">CMPE 16 <span class="classUnits badge badge-success">5</span><br></div>
+                                                        <div class="classHeader">CMPE 16 <span class="classUnits badge badge-success">5</span> <span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">T. Larabee<br></div>
                                                         <div class="classTime">MWF 9:30-10:40am<br></div>
                                                     </li>
