--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -642,8 +642,8 @@
                                                         <div class="classTime">TBA<br></div>
 
                                                     </li>
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">CMPE 16 <span class="classUnits badge badge-success">5</span> <span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
+                                                    <li class="ui-state-default" id="Fall12Class4">
+                                                        <div class="classHeader">CMPE 16 <span class="classUnits badge badge-success">5</span> <span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span></div>
                                                         <div class="classInstructor">T. Larabee<br></div>
                                                         <div class="classTime">MWF 9:30-10:40am<br></div>
                                                     </li>
@@ -655,43 +655,42 @@
                                                 {#                                <li class="ui-state-highlight">CMPS101</li>#}
                                                 {#                                <li class="ui-state-highlight">Math 21</li>#}
                                                 <ul id="Winter13" class="connectedSortable">
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">HCI 131 <span class="classUnits badge badge-success">1</span><br></div>
+                                                    <li class="ui-state-default" id="Winter13Class1">
+                                                        <div class="classHeader">HCI 131 <span class="classUnits badge badge-success">1</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">Instructor Name<br></div>
                                                         <div class="classTime">MWF 12-2pm<br></div>
                                                     </li>
                                                     <li class="ui-state-default">
-                                                        <div class="classHeader">CMPS 101 <span class="classUnits badge badge-success">5</span><br></div>
+                                                        <div class="classHeader" id="Winter13Class2">CMPS 101 <span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">M. Warmuth<br></div>
                                                         <div class="classTime">T/TH 5-6:45pm<br></div>
                                                     </li>
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">Math 21 <span class="classUnits badge badge-success">5</span> </div>
+                                                    <li class="ui-state-default" id="Winter13Class3">
+                                                        <div class="classHeader">Math 21 <span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span> </div>
                                                         <div class="classInstructor">W. Mackey<br></div>
                                                         <div class="classTime">TBA<br></div>
                                                     </li>
-                                                    {#                                    </ul>#}
                                                 </ul>
                                             </td>
                                             <td>
                                                 <ul id="Spring13" class="connectedSortable">
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">PHYSC 5C <span class="classUnits badge badge-success">5</span><br></div>
+                                                    <li class="ui-state-default" id="Spring13Class1">
+                                                        <div class="classHeader">PHYSC 5C <span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">Namme<br></div>
                                                         <div class="classTime">T/TH 5-6:45pm<br></div>
                                                     </li>
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">DANM 250C<span class="classUnits badge badge-success">5</span><br></div>
+                                                    <li class="ui-state-default" id="Spring13Class2">
+                                                        <div class="classHeader">DANM 250C<span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">J. Parker<br></div>
                                                         <div class="classTime">TBA<br></div>
                                                     </li>
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">PHYSC 5L <span class="classUnits badge badge-success">1</span><br></div>
+                                                    <li class="ui-state-default" id="Spring13Class3">
+                                                        <div class="classHeader">PHYSC 5L <span class="classUnits badge badge-success">1</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">Lab Instructor Namme<br></div>
                                                         <div class="classTime">TH 8:00am-6:45pm<br></div>
                                                     </li>
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">AMS <span class="classUnits badge badge-success">5</span> </div>
+                                                    <li class="ui-state-default" id="Spring13Class4">
+                                                        <div class="classHeader">AMS <span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span> </div>
                                                         <div class="classInstructor">MeowNelson<br></div>
                                                         <div class="classTime">MWF 12:00-1:40pm<br></div>
                                                     </li>
@@ -699,13 +698,13 @@
                                             </td>
                                             <td>
                                                 <ul id="Summer13" class="connectedSortable">
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">CMPS109 <span class="classUnits badge badge-success">5</span><br></div>
+                                                    <li class="ui-state-default" id="Summer13Class1">
+                                                        <div class="classHeader">CMPS109 <span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">W. Mackey<br></div>
                                                         <div class="classTime">T/TH 5-6:45pm<br></div>
                                                     </li>
-                                                    <li class="ui-state-default">
-                                                        <div class="classHeader">Math 24<span class="classUnits badge badge-success">5</span><br></div>
+                                                    <li class="ui-state-default" id="Summer13Class2">
+                                                        <div class="classHeader">Math 24<span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right"><i class="icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">Tamanoi<br></div>
                                                         <div class="classTime">TBA<br></div>
                                                     </li>
@@ -716,12 +715,10 @@
                                         </tbody>
                                         <tfoot>
                                         <tr>
-{#                                            <button href="#" class="btn  btn-small" id="addUIElement"><span class="ui-button-text">Add Element &raquo;</span></button>#}
-
-                                            <th><i class="icon-plus-sign"></i>&nbsp;<a class="addClass" id="Fall12B" href="#" >Add Course</a></th>
-                                            <th><i class="icon-plus-sign"></i>&nbsp;<a class="addClass" id="Winter13B" href="#" >Add Course</a></th>
-                                            <th><i class="icon-plus-sign"></i>&nbsp;<a class="addClass" id="Spring13B" href="#" >Add Course</a></th>
-                                            <th><i class="icon-plus-sign"></i>&nbsp;<a class="addClass" id="Summer13B" href="#" >Add Course</a></th>
+                                            <th><a class="addClass" id="Fall12B" href="#" ><i class="icon-plus-sign"></i>&nbsp;Add Course</a></th>
+                                            <th><a class="addClass" id="Winter13B" href="#" ><i class="icon-plus-sign"></i>&nbsp;Add Course</a></th>
+                                            <th><a class="addClass" id="Spring13B" href="#" ><i class="icon-plus-sign"></i>&nbsp;Add Course</a></th>
+                                            <th><a class="addClass" id="Summer13B" href="#" ><i class="icon-plus-sign"></i>&nbsp;Add Course</a></th>
                                             </th>
                                         </tr>
                                         </tfoot>
